# OpenLibCLI

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .graphifyignore  CMakeLists.txt  Makefile  Makefile.nmake  README.md  library.properties  make  meson.build  meson_options.txt  nmake  openlibcli.code-workspace
Docs/: Create_a_Issue.md  How_to_build.md
cli/: cli.c  cli_version.h
cmake/: openlibcliConfig.cmake.in
examples-embedded/: README.md
examples/linux/unix_socket/: cli_server_unix_socket.c  cli_server_unix_socket.h  cli_transport_unix_socket.c  cli_transport_unix_socket.h
examples/shared/: cli_demo_setup.c  cli_demo_setup.h
examples/win_linux/pipe/: cli_server_pipe.c  cli_server_pipe.h  cli_transport_pipe.c  cli_transport_pipe.h
examples/win_linux/serial/: cli_server_serial.c  cli_server_serial.h  cli_transport_serial.c  cli_transport_serial.h
examples/win_linux/tcp/: cli_server_tcp.c  cli_server_tcp.h  cli_transport_tcp.c  cli_transport_tcp.h
examples/win_linux/telnet/: cli_server_telnet.c  cli_server_telnet.h  cli_transport_telnet.c  cli_transport_telnet.h
meson/: meson.build  meson.wrap.in
scripts/: gen_version_header.py
scripts/build-helpers/: build.bat  build.sh  build_cmake.bat  build_cmake.ps1  build_cmake.sh  build_meson.bat  build_meson.ps1  build_meson.sh  build_mingw_gcc.bat  build_mingw_gcc.ps1  build_mingw_gcc.sh  build_msvc.bat  build_wsl.bat  build_wsl.ps1
scripts/diagnostics/: avr_mem_stats.ps1  avr_size_probe.c  cli_serial.c  cli_serial.h
scripts/lint/: lint.bat  lint.sh
scripts/package-helpers/: package_all.ps1  package_all.sh  package_cmake.ps1  package_cmake.sh  package_meson.ps1  package_meson.sh  package_meson_wrap.bat  package_meson_wrap.ps1  package_meson_wrap.sh  package_src.ps1  package_src.sh
tests/: test_cli_args_parse.c
tools/pvs-studio/: pvs-studio-settings.json
